--- a/Assets/Css/puppycafe.css
+++ b/Assets/Css/puppycafe.css
@@ -5,7 +5,9 @@
   font-optical-sizing: auto;
   font-weight: <weight>;
   font-style: normal; */
-
+html {
+  scroll-behavior: smooth;
+}
 .root,body{
     padding:0;
     margin:0;
@@ -113,16 +115,15 @@ gap: 2;
 .btn-supplies{
     color:#ffffff;
     background-color: #231F1F;
-    border:#231F1F;
+
     text-align: center;
-    padding:10px;
- 
-    border-radius: 10px;
+    padding:9px;
+ border-radius: 10px;
 }
 .btn-supplies:hover{
-    background-color:transparent;
-    border:2px solid #000000;
-    color:#000000;
+    background-color:#a09a9a;
+
+    color:#ffffff;
 
    
 }
@@ -282,6 +283,7 @@ color: #61C143;
     margin:0 auto;
     padding:50px;
 }
+
 .blue-inner-wrapper{
     max-width: 648px;
     margin:0 auto;
@@ -428,7 +430,9 @@ a{
 }
 li{
     list-style-type: none;
-   padding-bottom:20px;
+   /* padding-bottom:20px; */
+   padding-top:8px;
+   padding-bottom: 6px;
 }
 ul{
     padding-left:0px;
@@ -931,6 +935,13 @@ gap:0px;
 .paragraph-content-color{
     text-align: center;
 }
+.contact-new{
+display: none;
+    
+}
+.view{
+    display: none;
+}
 }
 @media (min-width:426px) and (max-width:768px){
     .wrapper-container{
@@ -1110,10 +1121,12 @@ gap:0px;
       text-align: center;
     }
     .popup__content {
-      width: 80%;
+      width: 50%;
+      border-radius: 20px;
       overflow: auto;
       padding: 50px;
-      background: white;
+      /* background: rgb(56 47 47 / 49%); */
+      background:transparent;
       color: black;
       position: relative;
       top: 50%;
@@ -1122,12 +1135,12 @@ gap:0px;
       box-sizing: border-box;
     }
     .close {
-      position: absolute;
-      right: 20px;
-      top: 20px;
-      width: 20px;
-      height: 20px;
-      cursor: pointer;
+    position: absolute;
+    right: 237px;
+    top: 75px;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
     }
     .close span {
       position: absolute;
@@ -1147,7 +1160,7 @@ gap:0px;
 
 .health-inner-right {
       text-align: center;
-      margin: 20px;
+      
     }
 
     .healthimageright {
@@ -1155,6 +1168,101 @@ gap:0px;
       height: auto;
       cursor: pointer;
     }
-  
+
+/* here the form css */
+.wrapper-container1{
+    max-width:950px;
+    margin:0 auto;
+    padding-bottom: 100px;
+}
+.btnsubmit{
+    margin-top:17px;
+}
+.form-main{
+    max-width: 1320px;
+    margin: 0 auto;
+    text-align:center;
+}
+.freesphere{
+    background-color: #000000;
+    color:#E5E5E5;
+    padding:10px;
+    border-radius:10px;
+    padding-left: 16px;
+    padding-right:16px;
+}
+.form-main{
+    background-image:url("../../Images/sectionimage/dog7.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-origin: padding-box;
+      background-origin: padding-box;
+      max-width:938px;
+      height:auto;
+      border-radius: 10px;
+     opacity:.9;
+      padding:30px;
+      display: none;
+          top: 128px;
+    left: 160px;
+      text-align: center;
+      position:absolute;
+     padding-bottom: 20px;
+       animation-name: floatAnimation;
+      animation-duration: 3s; 
+      animation-iteration-count: infinite; 
+      animation-timing-function: ease-in-out;
    
-   
+}
+ @keyframes floatAnimation {
+      0% {
+        transform: translateY(0); 
+      }
+      50% {
+        transform: translateY(-10px); 
+      }
+      100% {
+        transform: translateY(0); 
+      }
+    }
+.contact{
+    color:#61C143;
+    font-weight:700;
+    font-size: 61px;
+    padding-bottom: 20px;
+}
+
+
+.label{
+    color: rgb(1, 11, 14);
+    font-weight: 600;
+    border:yellow;
+    font-size:15px;
+    background-color: #858282;
+    border-radius: 10px;
+    padding:4px;
+    box-shadow: 0px 4px 28px -2px #00000014;
+}
+/* contact form for the header */
+.contact-wrapper{
+    max-width: 591px;
+    margin:0 auto;
+    display: flex;
+ flex-wrap: wrap;
+    
+}
+.contact-new{
+    background-color:#231F1F ;
+    color:#ffffff;
+    padding:10px;
+    border-radius: 10px;
+}
+.view{
+    color:#858282;
+    background-color: #ffffff;
+    text-align: start;
+    padding:12px;
+    padding-right:360px;
+    border-radius:10px;
+}
