--- a/Assets/Css/puppycafe.css
+++ b/Assets/Css/puppycafe.css
@@ -1192,27 +1192,29 @@ display: none;
     padding-right:16px;
 }
 .form-main{
-    background-image:url("../../Images/sectionimage/dog7.jpg");
-    background-repeat: no-repeat;
+    /* background-image:url("../../Images/sectionimage/dog7.jpg"); */
+      
+    background-color: white;
+ 
     background-position: center;
     background-size: cover;
     background-origin: padding-box;
-      background-origin: padding-box;
-      max-width:938px;
-      height:auto;
-      border-radius: 10px;
-     opacity:.9;
-      padding:30px;
-      display: none;
-          top: 128px;
-    left: 160px;
-      text-align: center;
-      position:absolute;
-     padding-bottom: 20px;
-       animation-name: floatAnimation;
-      animation-duration: 3s; 
-      animation-iteration-count: infinite; 
-      animation-timing-function: ease-in-out;
+    background-origin: padding-box;
+    max-width: 803px;
+    height: auto;
+    border-radius: 10px;
+  
+    padding: 30px;
+    display: none;
+    top: 328px;
+    left: 460px;
+    text-align: center;
+  
+    padding-bottom: 20px;
+    animation-name: floatAnimation;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
    
 }
  @keyframes floatAnimation {
@@ -1239,7 +1241,7 @@ display: none;
     font-weight: 600;
     border:yellow;
     font-size:15px;
-    background-color: #858282;
+    
     border-radius: 10px;
     padding:4px;
     box-shadow: 0px 4px 28px -2px #00000014;
