--- a/Assets/Css/puppycafe.css
+++ b/Assets/Css/puppycafe.css
@@ -1555,7 +1555,7 @@ header top css  */
 }
 
 .inner-div {
-  display:inline-flex;
+  display:flex !important;
   align-items: center;
 
   gap: 30px;
@@ -1571,6 +1571,13 @@ background-color: #fff;
 
 .left {
   flex: 1;
+ 
+
+    flex: 1;
+    margin: 0 auto;
+    align-items: center;
+    padding-top: 58px;
+
 }
 
 .left h6 {
